--- a/public/css/style.css
+++ b/public/css/style.css
@@ -2,7 +2,8 @@
 
 body {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 14px;
+    font-size: 20px;
+    background-color: silver;
 }
 
 .container {
@@ -11,7 +12,7 @@ body {
 }
 
 h1 {
-    font-size: 16px;
+    font-size: 2rem;
     padding-bottom: 10px;
     margin-bottom: 15px;
     border-bottom: 1px solid #ddd;
@@ -22,15 +23,20 @@ ul > li {
 }
 
 .header-menu {
-    font-size: 12px;
+    font-size: 1rem;
     font-weight: normal;
     float: right;
+}
+
+form{
+    display: inline-block;
 }
 
 input[type="text"], textarea {
     box-sizing: border-box;
     width: 400px;
     padding: 5px;
+    /*display: inline-block;*/
 }
 
 textarea {
@@ -38,19 +44,19 @@ textarea {
 }
 
 .error {
-    font-size: 12px;
+    font-size: 1rem;
     color: tomato;
 }
 
 .edit {
-    font-size: 12px;
+    font-size: 1rem;
 }
 
 .del {
-    font-size: 12px;
+    font-size: 1rem;
 }
 
 h2 {
-    font-size: 14px;
+    font-size: 1.2rem;
     padding-top: 25px;
 }
